; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-socket.c_parse_listener_ipv4.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-socket.c_parse_listener_ipv4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"8080\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"0.0.0.0\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"*\00", align 1
@AF_INET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8**, i8**)* @parse_listener_ipv4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_listener_ipv4(i8* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i8* @strrchr(i8* %8, i8 signext 58)
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %23, label %12

12:                                               ; preds = %3
  %13 = load i8**, i8*** %6, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %13, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @strchr(i8* %14, i8 signext 46)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %12
  %18 = load i8**, i8*** %5, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %18, align 8
  br label %22

19:                                               ; preds = %12
  %20 = load i8*, i8** %4, align 8
  %21 = load i8**, i8*** %5, align 8
  store i8* %20, i8** %21, align 8
  br label %22

22:                                               ; preds = %19, %17
  br label %37

23:                                               ; preds = %3
  %24 = load i8*, i8** %7, align 8
  store i8 0, i8* %24, align 1
  %25 = load i8*, i8** %4, align 8
  %26 = load i8**, i8*** %5, align 8
  store i8* %25, i8** %26, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 1
  %29 = load i8**, i8*** %6, align 8
  store i8* %28, i8** %29, align 8
  %30 = load i8**, i8*** %5, align 8
  %31 = load i8*, i8** %30, align 8
  %32 = call i64 @streq(i8* %31, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %23
  %35 = load i8**, i8*** %5, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %35, align 8
  br label %36

36:                                               ; preds = %34, %23
  br label %37

37:                                               ; preds = %36, %22
  %38 = load i32, i32* @AF_INET, align 4
  ret i32 %38
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32 @strchr(i8*, i8 signext) #1

declare dso_local i64 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
